<resources>
    <string name="app_name">IOki</string>
    <string name="password">Password</string>
    <string name="name">Username</string>
    <string name="register">Not registered? Create new account</string>
    <string name="next_button">Next</string>
    <string name="confirm_password">Confirm password</string>
    <string name="contact_number">Contact Number</string>
    <string name="email">Email ID</string>
    <string name="pin">Enter security PIN</string>
    <string name="RegistrationDone">Done</string>
    <string name="enter_username">Username</string>
    <string name="next_button1">Next</string>
    <string name="next">Next</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_4_digit_pin">Enter 4 digit PIN</string>
    <string name="lock">Locks</string>
    <string name="credentials">Credentials</string>
    <string name="settings">Settings</string>
    <string name="otp_request_text">Validate phone number using OTP</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="logout">Logout</string>
    <string name="nav_header_text">Prithvi Anand</string>
    <string name="enter_otp_here">Enter OTP</string>
    <string name="lock_id_editTextView">Enter Lock ID</string>
    <string name="lock_name_editTextView">Enter Name</string>
    <string name="submit">Submit</string>
    <string name="enter_link">Enter Link</string>
    <string name="login">Login</string>
    <string name="type">Type</string>
    <string name="expiry_date">Expiry Date</string>
</resources>
