<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/navBar_group1">
        <item android:id="@+id/navBar_quick"
            android:orderInCategory="1"
            android:title="Frequently Used"
            android:icon="@mipmap/baseline_offline_bolt_black_24"
            android:onClick="loadFrequentlyUsed"/>
    </group>
    <group android:id="@+id/navBar_group2">
        <item android:id="@+id/navBar_locks"
            android:orderInCategory="2"
            android:title="@string/lock"
            android:icon="@mipmap/baseline_lock_black_24"
            android:onClick="loadLocks"/>
        <item android:id="@+id/navBar_credentials"
            android:orderInCategory="3"
            android:title="@string/credentials"
            android:icon="@mipmap/baseline_payment_black_24"
            android:onClick="loadCredentials"/>
    </group>
    <group android:id="@+id/navBar_group3">
        <item android:id="@+id/navBar_settings"
            android:orderInCategory="4"
            android:title="@string/settings"
            android:icon="@mipmap/baseline_settings_black_24"/>
        <item
            android:id="@+id/navBar_logout"
            android:icon="@mipmap/baseline_undo_black_24"
            android:onClick="logout"
            android:orderInCategory="5"
            android:title="@string/logout" />
    </group>
</menu>