<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:orientation="horizontal"
            android:layout_gravity="center_vertical"
            android:background="#ddd">

            <RelativeLayout
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:background="@mipmap/edit_cred" />

        </RelativeLayout>

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:orientation="vertical"
            android:gravity="center_vertical"
            android:paddingTop="25dp">

            <EditText
                android:id="@+id/loginUpdateCredential"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/login" />

            <EditText
                android:id="@+id/passwordUpdateCredentials"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/spinnerTextView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:paddingStart="6dp"
                    android:textAlignment="textEnd"
                    android:layout_marginTop="5dp"
                    android:text="@string/type"/>

                <Spinner
                    android:id="@+id/updateSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp" />

            </LinearLayout>
            <Button
                android:id="@+id/addLockSubmitButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:layout_gravity="end"
                android:onClick="updateCredential"
                android:layout_marginTop="15dp"/>

        </android.support.v7.widget.LinearLayoutCompat>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>