<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:orientation="horizontal"
            android:layout_gravity="center_vertical"
            android:background="#ddd">

            <RelativeLayout
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:background="@mipmap/share" />

        </RelativeLayout>

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:orientation="vertical"
            android:gravity="center_vertical"
            android:paddingTop="25dp">

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_username"
                android:layout_marginTop="10dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="8dp"
                    android:paddingStart="4dp"
                    android:paddingTop="4dp"
                    android:paddingEnd="4dp"
                    android:text="@string/expiry_date"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/dateTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="end"
                    android:clickable="true"
                    android:focusable="true"
                    android:paddingBottom="8dp"
                    android:paddingEnd="4dp"
                    android:paddingStart="8dp"
                    android:paddingTop="4dp"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingEnd="4dp"
                    android:paddingBottom="8dp"
                    android:paddingStart="4dp"
                    android:paddingTop="4dp"
                    android:text="Expiry Time"
                    android:textSize="18dp" />

                <TextView
                    android:id="@+id/timeTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="end"
                    android:clickable="true"
                    android:focusable="true"
                    android:onClick="setExpiryTime"
                    android:paddingBottom="8dp"
                    android:paddingEnd="4dp"
                    android:paddingStart="8dp"
                    android:paddingTop="4dp"
                    android:textSize="18sp" />
            </LinearLayout>

            <Button
                android:id="@+id/addLockSubmitButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:layout_gravity="end"
                android:layout_marginTop="15dp"
                android:onClick="shareButton"/>


        </android.support.v7.widget.LinearLayoutCompat>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>